# kaizen

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
apps/game/: CMakeLists.txt  main.cpp
apps/sandbox/: CMakeLists.txt  main.cpp
apps/tools/: CMakeLists.txt
cmake/: Dependencies.cmake
docs/: animation-system.md  content-pipeline.md  example-standing-dlr.md  game-design.md
src/core/: CMakeLists.txt
src/core/include/kaizen/core/: ik.h  jacobian_ik.h  math.h  skeleton.h  two_body_ik.h  types.h
src/core/src/: core.cpp  dense_math.h  ik.cpp  ik_internal.h  ik_shared.h  jacobian_ik.cpp  skeleton.cpp  two_body_ik.cpp
src/game/: CMakeLists.txt
src/game/include/kaizen/game/: match_engine.h
src/game/src/: match_engine.cpp
src/platform/: CMakeLists.txt
src/platform/include/kaizen/platform/: window.h
src/platform/src/: window.cpp
src/render/: CMakeLists.txt
src/render/include/kaizen/render/: camera.h  debug_draw.h  renderer.h  skeleton_renderer.h
src/render/src/: camera.cpp  debug_draw.cpp  renderer.cpp  skeleton_renderer.cpp
tests/: CMakeLists.txt  test_ik.cpp  test_jacobian_ik.cpp  test_placeholder.cpp  test_skeleton.cpp  test_two_body_ik.cpp
